test-suite/cases/eure-schema-to-json-schema/errors/bigint-out-of-range.eure
// Test error: Integer constraint exceeding i64 bounds

schema = ```eure
$variant = "integer"
range = "[0, 99999999999999999999999999]"
```

json_schema_errors[] = "BigInt value 99999999999999999999999999 is out of range for JSON Schema i64"
